# pendulumwave

./: .gitignore  CMakeLists.txt  LICENCE  main.cpp
